--- a/notebooks/1_3.ipynb
+++ b/notebooks/1_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled12.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPfIoRdWzloOD/RYvwZithH",
+      "authorship_tag": "ABX9TyPSobTltWNOUBvfB1ozQa00",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "id": "RV9BDsok-CbJ"
       },
       "source": [
-        "Implement the solutions of the following two problems in CVXPY and scipy. Compare them in terms of time."
+        "Implement the solutions of the following two problems in CVXPY and scipy. Compare them in terms of time and closeness."
       ]
     },
     {
@@ -74,7 +74,7 @@
         "X = np.random.randn(m, n)\n",
         "y = np.random.randn(m)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
         "b = A@x0 + s0\n",
         "c = -A.T@lamb0"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
