--- a/notebooks/1_2.ipynb
+++ b/notebooks/1_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled11.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPreMieTxnp1VLq7p5vAmlF",
+      "authorship_tag": "ABX9TyPqcQVJ0e4A3v2rN052Em+r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "source": [
         "# Your code here"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
         "id": "yV86vSCC6rHH"
       },
       "source": [
-        "## [Risk budget allocation](https://web.stanford.edu/~boyd/cvxbook/bv_cvxbook_extra_exercises.pdf).\n",
+        "## EXTRA: [Risk budget allocation](https://web.stanford.edu/~boyd/cvxbook/bv_cvxbook_extra_exercises.pdf).\n",
         "\n",
         "Suppose an amount $x_i>0$ is invested in $n$ assets, labeled $i=1,..., n$,\n",
         "with asset return covariance matrix $\\Sigma \\in \\mathcal{S}_{++}^n$.\n",
@@ -156,7 +156,7 @@
         "                     0.1  0.9  -0.7  2.3\"\"\"))\n",
         "rho = np.ones(4)/4"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
